Rework for Arabic

--- a/configs/rp_v2.0.conf
+++ b/configs/rp_v2.0.conf
@@ -1,10 +1,11 @@
 # run parameters
-DATA_ROOT=""
+DATA_ROOT="dataroot"
 ARTIFACTS_ID="rpv2"
 INPUT_BASE_URI="file://${DATA_ROOT}/"
 OUTPUT_BASE_URI="file://${DATA_ROOT}/rpv2"
 MAX_DOCS=-1
-LANGUAGES=("en" "fr" "es" "it" "de")
+# LANGUAGES=("en" "fr" "es" "it" "de")
+LANGUAGES=("ar")
 
 # filename keep filters
 FILENAME_KEEP_PATTERNS=(
@@ -20,7 +21,8 @@ S3_PROFILE=""
 
 # Docker
 DOCKER_S3_ENDPOINT_URL=""
-DOCKER_MNT_DIR="/mnt/data"
+# DOCKER_MNT_DIR="/mnt/data"
+DOCKER_MNT_DIR="dataroot"
 DOCKER_REPO=""
 
 # Dedupe
